# llm-cost-profiler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: batch_job.py  example_basic_profiler.py  example_jsonl_logging.py  example_model_price_override.py  example_multiple_calls.py  fastapi_server.py  langchain_integration.py  openai_integration.py
src/llm_cost_profiler/: __init__.py  price_fetcher.py  pricing.py  profiler.py  wrappers.py
tests/: test_price_fetcher.py
